my-vue-app/src/pages/stylesheets/Team.css
.team-title{
    margin-top: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}
#profile-picture{
    object-fit: cover;
}
#team-card-rows{
    align-items: stretch;  
}
.profile-desc{
    max-height: 500px;
    position: absolute;
    top: 97%;
    width: 89.6%;
}
.grade-list-item{
    background-color: transparent;
}
.grade-list-item:hover{
    transition: all 0.3s ease;
    background-color: rgb(45, 155, 185)
}
.grade-list-item a:hover{
    color: white;
}
.grade-title{
    padding: 20px;
    background-color: rgb(30, 100, 120);
    margin-bottom: 10px;
}
.team-card:hover{
    transition: transform 0.3s ease;
}
a{
    text-decoration: none;
    color: black;
}
.card-img-top{
    border-radius: 0px;
}

